# flask-learn

./: .coverage  .gitignore  Dockerfile  demo.py  main.py  pyproject.toml  requirements.txt  results.xml  test-report.html
.github/workflows/: main.yml
src/flask_learn/: __init__.py  auth.py  blog.py  db.py  logger.py  schema.sql
src/flask_learn/static/css/: main.css
src/flask_learn/static/js/: main.js
src/flask_learn/templates/: 400.html  404.html  500.html  base.html  error.html
src/flask_learn/templates/auth/: login.html  register.html
src/flask_learn/templates/blog/: create.html  create_or_edit.html  edit.html  index.html
tests/: conftest.py  data.sql  test_auth.py  test_blog.py  test_db.py  test_factory.py
