[project]
name = "flask-learn"
version = "0.0.1"
description = "Learn Flask"
classifiers = ["Private :: Do Not Upload"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "coverage>=7.12.0",
    "flask>=3.1.2",
    "pytest>=9.0.1",
    "pytest-html>=4.1.1",
    "pytz>=2025.2",
]

[build-system]
requires = ["uv_build >= 0.9.9, <0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/flask_learn"]
